# GAN_brain_tumour_evolution

./: .gitignore  README.md  REFACTORING_SUMMARY.txt  pyproject.toml  run_tests.sh  test.py  test_time.py  train.py  train_time.py
data/: aligned_dataset.py  aligned_dataset_DM.py  aligned_dataset_TPN.py  aligned_dataset_time.py  base_data_loader.py  base_dataset.py  custom_dataset_data_loader.py  data_loader.py  image_folder.py
models/: base_gan_model.py  base_model.py  dea_gan_model.py  gea_gan_model.py  gea_gan_model_DM.py  gea_gan_model_TPN.py  models.py  networks.py  networks_time.py  time_predictor_model.py
options/: base_options.py  train_options.py
tests/: test_base_classes.py  test_data_loader.py  test_html.py  test_image_folder.py  test_image_pool.py  test_models_factory.py  test_networks.py  test_png.py  test_util.py
util/: html.py  image_pool.py  png.py  util.py  visualizer.py
